--- a/css/not.css
+++ b/css/not.css
@@ -12,23 +12,30 @@
     max-width: 1200px;
   }
   .conteudo-contet {
-    max-width: 1200px;
+    max-width: 800px;
+    align-items: center;
   }
   .conteudo-titulo h1 {
-    font-size: 50px;
+    font-size: 40px;
     margin-bottom: 30px;
     color: rgb(7, 7, 7);
     animation: titulo 2s ease-in-out;
   }
 
   .conteudo-titulo p {
-    font-size: 20px;
+    font-size: 15px;
     color: rgb(14, 13, 13);
+  }
+  .conteudo-titulo a {
+    padding: 13px 100px;
+    left: 100px;
   }
   .conteudo-video {
   }
   .conteudo-video video {
-    width: 550px;
-    height: 400px;
+    position: relative;
+    left: 100px;
+    width: 360px;
+    height: 250px;
   }
 }
